[tool.poetry]
name = "docker-py"
version = "2.0"
description = "Fork of docker/docker-py"
authors = ["James Hodgkinson <james@terminaloutcomes.com>"]

[tool.poetry.dependencies]
python = "^3.9"
websocket-client = "^1.4.1"
requests = "^2.28.1"
paramiko = { version = "^2.4.3", optional = true}

idna = { version = "^3.4", optional = true}
pyOpenSSL = { version = "^22.1.0", optional = true}
cryptography = { version = "^38.0.1", optional = true}

[tool.poetry.dev-dependencies]
pylint = "^2.15.3"
pytest = "^7.1.3"
mypy = "^0.981"
black = "^22.10.0"
coverage = "^6.5"
flake8 = "^5.0.4"
pytest-cov = "^4.0.0"
pytest-timeout = "^2.1.0"

[tool.poetry.extras]
tls = [
    "pyOpenSSL",
    "cryptography",
]

# Only required when connecting using the ssh:// protocol
ssh = [
    "paramiko",
]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

